make hamburger menu fixed and more visible on small devices

--- a/src/common/styles/variables.scss
+++ b/src/common/styles/variables.scss
@@ -19,7 +19,7 @@ $gotham-book: $conduit-light; // TODO Change font to Gotham-Book
 
 // Transparency
 $black-low-opacity: rgba($black, 0.2);
-$black-medium-opacity: rgba($black, 0.5);
+$black-medium-opacity: rgba($black, 0.7);
 $black-high-opacity: rgba($black, 0.9);
 
 $white-high-opacity: rgba($white, 0.7);
